@@ -1,3 +1,11 @@
+2008-10-01  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/configurationassistant.py:
+	* flumotion/admin/gtk/productionsteps.py:
+	Improve documentation, add a couple of docstrings explaining
+	the design and implementation of the configuration assistant.
+	No code changes.
+
 2008-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/consumers/disker/disker.py:
